kadu (0.10.1-1) unstable; urgency=low

  * New upstream release
  * Removed debian/patches/04-globalhotkeys.patch -- no longer needed.

 -- Patryk Cisek <patryk@debian.org>  Mon, 24 Oct 2011 18:15:11 +0200

kadu (0.10.0-3) unstable; urgency=low

  * Added globalhotkeys.desc to kadu-external-modules.install

 -- Patryk Cisek <patryk@debian.org>  Mon, 17 Oct 2011 15:28:43 +0200

kadu (0.10.0-2) unstable; urgency=low

  * Moved import_history, messagessplitter, networkping and nextinfo
    plugins from kadu to kadu-external-modules
  * Added globalhotkeys plugin
  * Moved idle and auto_hide plugin files in appropriate packages
  * Refreshed information in debian/copyright

 -- Patryk Cisek <patryk@debian.org>  Sun, 16 Oct 2011 12:05:59 +0200

kadu (0.10.0-1) unstable; urgency=low

  * New upstream release
  * Added libsqlite3-dev to Build-Depends
  * Added kadu-dev package
  * Removed libjs-mootools from kadu-common Depends and libao-dev from
    Build-Depends
  * Got rid of kadu.install.(no)alsa -- no alsa_sound plugin anymore
  * Updated external plugins to their newest upstream versions

 -- Patryk Cisek <patryk@debian.org>  Fri, 23 Sep 2011 17:31:22 +0200

kadu (0.9.2-2) unstable; urgency=low

  * Rebuild to link against libgadu3 version 1.11.0-2 or newer needed
    (Closes: #637172)
  * Upstream fixed build error when using gcc 4.6.1 (Closes: #634396)
  * Changed build dependency from libasound-dev to libasound2-dev
    (Closes: #637138, #635305)

 -- Patryk Cisek <patryk@debian.org>  Tue, 09 Aug 2011 09:53:46 +0200

kadu (0.9.2-1) unstable; urgency=low

  * New upstream release
  * Updated debian/patches/02-.config.patch to make it fit 0.9.2
  * Updated debian/patches/01-no_autodownload.patch to make it fit 0.9.2
  * Removed server_monitor module's files from *.install -- module's been
    removed upstream.

 -- Patryk Cisek <patryk@debian.org>  Fri, 01 Jul 2011 15:55:45 +0200

kadu (0.9.1-1) unstable; urgency=low

  * New upstream release