@@ -2,8 +2,9 @@ kadu (0.10.1-1) unstable; urgency=low
 
   * New upstream release
   * Removed debian/patches/04-globalhotkeys.patch -- no longer needed.
+  * Updated debian/patches/03-about-dialog.patch for Kadu 0.10.1
 
- -- Patryk Cisek <patryk@debian.org>  Mon, 24 Oct 2011 18:15:11 +0200
+ -- Patryk Cisek <patryk@debian.org>  Mon, 24 Oct 2011 18:20:01 +0200
 
 kadu (0.10.0-3) unstable; urgency=low
 
